--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="shortcut icon" href="../src/assets/images/ico.png" type="image/x-icon">
     
     <title>Letmeask</title>
   </head>
